--- a/app.json
+++ b/app.json
@@ -1,13 +1,36 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/logs/logs"
+    "pages/logs/logs",
+    "pages/test/test"
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle": "black",
-    "enablePullDownRefresh": true
-  }
+    "navigationBarBackgroundColor": "#282C34",
+    "navigationBarTitleText": "meizi",
+    "navigationBarTextStyle": "white",
+    "enablePullDownRefresh": "true"
+  },
+  "tabBar": {
+    "backgroundColor": "#282C34",
+    "color": "#999",
+    "position": "bottom",
+    "selectedColor": "#fff",
+    "borderStyle": "black",
+    "list": [
+      {
+        "pagePath": "pages/index/index",
+        "text": "首页",
+        "iconPath": "assets/1.png",
+        "selectedIconPath": "assets/2.png"
+      }, 
+      {
+        "pagePath": "pages/test/test",
+        "text": "test",
+        "iconPath": "assets/1.png",
+        "selectedIconPath": "assets/2.png"
+      }
+    ]
+  },
+  "debug": true
 }
